--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <title>El titulo del post</title>
-    <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" href="css/estilo.css"/>
     <body>
       <div id="container">
-	<div id ="cabecera">
-    Cabecera
-  </div>
-	<div id="post">
-	  <h1>Este es el titulo atractivo e interesante del post</h1>
-	  <p> Y este es el parrafo de inicio donde camos a explicar las cosas increibles que se pueden hacer con ramas
-	<div>
+      	<div id ="cabecera">
+          Cabecera
+        </div>
+	      <div id="post">
+	        <h1>Este es el titulo atractivo e interesante del post</h1>
+	        <p> Y este es el parrafo de inicio donde camos a explicar las cosas increibles que se pueden hacer con ramas
+	      <div>
       <div>
 </html>
 
