--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <body>
       <div id="container">
       	<div id ="cabecera">
-          Cabecera
+          Hyperblog
+          <span id="tagline">Tu blog de confianza</span>
         </div>
 	      <div id="post">
 	        <h1>Este es el titulo atractivo e interesante del post</h1>
 	        <p> Y este es el parrafo de inicio donde camos a explicar las cosas increibles que se pueden hacer con ramas
 	      <div>
       <div>
+    </div>
 </html>
 
